--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">RodentsHelper</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name = "show_dialog">Show Dialog</string>
+
+    <string-array name="weightList">
+        <item>Codziennie</item>
+        <item>Co tydzień</item>
+        <item>Co dwa tygodnie</item>
+        <item>Co miesiąc</item>
+        <item>Co pół roku</item>
+    </string-array>
 </resources>
