Notification module - polishing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
         <item>Co tydzień</item>
         <item>Co dwa tygodnie</item>
         <item>Co miesiąc</item>
+        <item>Co trzy miesiące</item>
         <item>Co pół roku</item>
     </string-array>
 
