--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+
+    <string name="extra_sql_query">extra.SqlQuery</string>
+
+
+
     <string name = "show_dialog">Show Dialog</string>
 
     <string-array name="weightList">
