--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
 
     <string name="choose_rodent_name">Wybierz gatunek zwierzęcia</string>
     <string name="about_app_name">O aplikacji</string>
+    <string name="update_encyclopedia_name">Zarządzaj aktualizacjami</string>
 
 </resources>
