--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
 
 
     <string name="choose_rodent_name">Wybierz gatunek zwierzęcia</string>
+    <string name="database_management_name">Zarządzanie danymi</string>
     <string name="about_app_name">O aplikacji</string>
     <string name="update_encyclopedia_name">Zarządzaj aktualizacjami</string>
 
