--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="about_app_name">O aplikacji</string>
     <string name="update_encyclopedia_name">Zarządzaj aktualizacjami</string>
 
+    <string name="sp">ga8!Sfd</string>
+
 </resources>
