Vet map - added all markers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="database_management_name">Zapis w chmurze</string>
     <string name="about_app_name">O aplikacji</string>
     <string name="update_encyclopedia_name">Zarządzaj aktualizacjami</string>
+    <string name="info_maps_name">Info</string>
 
     <string name="sp">ga8!Sfd</string>
 
